--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,9 @@
     --opp-color:#FFFFFF;
     --сurrent-color: #2196F3;
     --alt-color:#757575;
-}
+    --another-opp-color:#E5E5E5; 
+    
+}   
 
 li {
     list-style-type: none;
@@ -67,7 +69,7 @@ line-height: 1.88;
     text-transform:uppercase;
 }
 .middle-section {
-    background-color: #E5E5E5;
+    background-color: var(--another-opp-color);
 }
 
 .title{
@@ -87,7 +89,8 @@ line-height: 1.88;
 }
 
 .bottom-title {
-    background-color: #F5F4FA;
+    --bottom-color: #F5F4FA;   
+    background-color: var(--bottom-color); 
 }
 
 .name-title {
@@ -102,7 +105,8 @@ line-height: 1.88;
 }
 
 .footer{
-    background-color: #2F303A;
+    --footer-colour: #2F303A; 
+    background-color: var(--footer-colour);
     font-weight: 400;
     color:var(--opp-color);
 }
@@ -127,6 +131,7 @@ line-height: 1.88;
 
 .portfolio-top{
     font-weight: 500;
+    background-color: var(--another-opp-color); 
 }
 
 .invisible {
